Bug 406316, clear tree caches when setting attributes on tree or body, r+sr=neil,a=damon